tests/baselines/reference/functionOverloads3.errors.txt
==== tests/cases/compiler/functionOverloads3.ts (1 errors) ====
    function foo():string;
    ~~~~~~~~
!!! error TS1041: Function implementation expected.